fix menu gap in homepage

--- a/css/CssHome/main.css
+++ b/css/CssHome/main.css
@@ -147,4 +147,6 @@ main{
 .menu2:hover{
     background-color: #E8EBED;
 }
-
+.menu .menu2{
+    margin-top: 5px;
+}
