--- a/css/LoTrinh/header.css
+++ b/css/LoTrinh/header.css
@@ -26,6 +26,7 @@ a{
     padding-left: 20px;
     padding-right: 20px;
     z-index: 2;
+    background-color: white;
 }
 .header_item1{
     padding-left: 20px;
